<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_gravity="center_horizontal"
    android:animateLayoutChanges="true">
<RelativeLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/drink_row"
    android:padding="0dp"
    android:background="@drawable/rounded_container"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/drink_row_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white_blue"
        android:textSize="15sp" />
<!--
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:src="@drawable/ic_star" />
-->

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:src="@drawable/ic_baseline_star_24" />

    <TextView
        android:id="@+id/drink_row_rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:gravity="center"
        android:text="0/5"
        android:textColor="@color/star_yellow"
        android:textSize="20sp" /> <!-- previously 14sp -->



</RelativeLayout>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_recipe_container"
        android:visibility="visible"
        android:orientation="vertical"
        android:id="@+id/recipe_details"
        android:animateLayoutChanges="true"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_recipe_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/Ingredient_list_title"
            android:layout_alignEnd="@+id/Ingredient_list_title"
            android:layout_alignRight="@+id/Ingredient_list_title"
            android:layout_marginTop="-8dp"
            android:layout_marginEnd="-61dp"
            android:layout_marginRight="-61dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/item_main"
            android:clickable="true"
            android:focusable="true"
            android:foregroundGravity="center"
            app:fabCustomSize="40dp"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <TextView
            android:id="@+id/Ingredient_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="75dp"
            android:layout_marginEnd="75dp"
            android:text="@string/ingredients"
            android:textColor="@color/navy"
            android:textSize="25dp" />


        <LinearLayout
            android:id="@+id/view_recipe_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headings_title"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/headings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Ingredient_list_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/ingredientsListTitle"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:text="@string/partsTitle"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/method_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_recipe_ingredients_list"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/method"
            android:textColor="@color/navy"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/method_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/method_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="6dp"
            android:text="Method text"
            android:textColor="@color/navy_dark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/method_text"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="11dp"
            android:text="@string/notes"
            android:textColor="@color/navy"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/view_recipe_notes"
            android:layout_width="330dp"
            android:layout_height="125dp"
            android:layout_below="@+id/notes_title"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_notes"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:hint="@string/notes_hint"
            android:padding="8dp"
            android:textColor="@color/navy_dark"
            android:textColorHint="@color/navy"
            android:textSize="12sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/note_save_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/view_recipe_notes"
            android:layout_alignRight="@+id/view_recipe_notes"
            android:layout_alignBottom="@+id/view_recipe_notes"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/item_main"
            android:clickable="true"
            android:focusable="true"
            android:foregroundGravity="center"
            app:fabCustomSize="40dp"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </RelativeLayout>

</LinearLayout>